[gd_scene load_steps=79 format=3 uid="uid://dga4klregd82"]

[ext_resource type="Texture2D" uid="uid://bgc5rl13dopuj" path="res://addons/proton_scatter/demos/assets/textures/sky_2.png" id="1_bp1wy"]
[ext_resource type="Script" path="res://addons/proton_scatter/src/scatter.gd" id="1_odnwj"]
[ext_resource type="Script" path="res://addons/proton_scatter/src/stack/modifier_stack.gd" id="2_wdwa6"]
[ext_resource type="Script" path="res://addons/proton_scatter/src/scatter_item.gd" id="3_tn31i"]
[ext_resource type="Material" uid="uid://c7mw5tryqfggw" path="res://addons/proton_scatter/demos/assets/materials/m_water.tres" id="3_yrj3o"]
[ext_resource type="Script" path="res://addons/proton_scatter/src/scatter_shape.gd" id="4_5klvy"]
[ext_resource type="Script" path="res://addons/proton_scatter/src/modifiers/create_inside_grid.gd" id="4_cnevb"]
[ext_resource type="Script" path="res://addons/proton_scatter/src/modifiers/randomize_transforms.gd" id="5_h0430"]
[ext_resource type="Script" path="res://addons/proton_scatter/src/shapes/path_shape.gd" id="8_vjeqj"]
[ext_resource type="Script" path="res://addons/proton_scatter/src/shapes/sphere_shape.gd" id="9_mhcwm"]
[ext_resource type="Script" path="res://addons/proton_scatter/src/shapes/box_shape.gd" id="11_lv5tc"]
[ext_resource type="Script" path="res://addons/proton_scatter/src/modifiers/relax.gd" id="12_04tbd"]
[ext_resource type="Script" path="res://addons/proton_scatter/src/modifiers/project_on_geometry.gd" id="13_s5uny"]
[ext_resource type="PackedScene" uid="uid://bmglbfn5jaubp" path="res://addons/proton_scatter/demos/assets/gobot.tscn" id="15_mnk3f"]
[ext_resource type="Script" path="res://addons/proton_scatter/src/modifiers/create_inside_random.gd" id="15_terd0"]
[ext_resource type="Script" path="res://addons/proton_scatter/src/modifiers/randomize_rotation.gd" id="16_qmwrn"]
[ext_resource type="Script" path="res://addons/proton_scatter/src/modifiers/array.gd" id="17_2af2s"]
[ext_resource type="Script" path="res://addons/proton_scatter/demos/loading.gd" id="18_0clps"]

[sub_resource type="PanoramaSkyMaterial" id="PanoramaSkyMaterial_bxgb5"]
panorama = ExtResource("1_bp1wy")

[sub_resource type="Sky" id="Sky_ju840"]
sky_material = SubResource("PanoramaSkyMaterial_bxgb5")

[sub_resource type="Environment" id="Environment_1kod5"]
background_mode = 2
background_energy_multiplier = 1.25
sky = SubResource("Sky_ju840")
sky_rotation = Vector3(0, 1.13446, 0)
ambient_light_color = Color(0.352941, 0.215686, 0.529412, 1)
ambient_light_sky_contribution = 0.2
ambient_light_energy = 0.5
tonemap_mode = 3
tonemap_white = 1.2
glow_enabled = true
fog_enabled = true
fog_light_color = Color(0.243137, 0.411765, 0.607843, 1)
fog_light_energy = 1.8
fog_density = 0.02
fog_sky_affect = 0.05
fog_height = 4.0
fog_height_density = 0.02
volumetric_fog_temporal_reprojection_enabled = false
adjustment_enabled = true
adjustment_contrast = 1.15
adjustment_saturation = 1.1

[sub_resource type="PlaneMesh" id="PlaneMesh_84bvf"]
size = Vector2(300, 300)

[sub_resource type="Resource" id="Resource_slkpd"]
script = ExtResource("4_cnevb")
spacing = Vector3(1.5, 2, 1)
enabled = true
override_global_seed = false
custom_seed = 0
restrict_height = true
reference_frame = 0

[sub_resource type="Resource" id="Resource_hc5ta"]
script = ExtResource("5_h0430")
position = Vector3(0.173, 0.222, 0.918)
rotation = Vector3(10, 360, 10)
scale = Vector3(1.201, 0.399, 1.183)
enabled = true
override_global_seed = true
custom_seed = 10
restrict_height = false
reference_frame = 2

[sub_resource type="Resource" id="Resource_4npfm"]
script = ExtResource("16_qmwrn")
rotation = Vector3(360, 0, 360)
snap_angle = Vector3(180, 0, 180)
enabled = true
override_global_seed = false
custom_seed = 0
restrict_height = false
reference_frame = 2

[sub_resource type="Resource" id="Resource_nl1d8"]
script = ExtResource("2_wdwa6")
stack = Array[Resource("res://addons/proton_scatter/src/modifiers/base_modifier.gd")]([SubResource("Resource_slkpd"), SubResource("Resource_hc5ta"), SubResource("Resource_4npfm")])

[sub_resource type="Curve3D" id="Curve3D_ew6qf"]
_data = {
"points": PackedVector3Array(3.80872, 0, 0.938568, -3.80872, 0, -0.938568, -5.23002, 0, 0.969148, -4.01273, -4.76837e-07, 0.319402, 4.01273, 4.76837e-07, -0.319402, -4.0201, 0, -3.87154, 0.483762, 0, -2.35326, -0.483762, 0, 2.35326, 2.27396, 0, -0.779812),
"tilts": PackedFloat32Array(0, 0, 0)
}
point_count = 3

[sub_resource type="Resource" id="Resource_ftiyl"]
script = ExtResource("8_vjeqj")
closed = true
thickness = 0.0
curve = SubResource("Curve3D_ew6qf")

[sub_resource type="Resource" id="Resource_egokv"]
script = ExtResource("4_cnevb")
spacing = Vector3(4, 4, 4)
enabled = true
override_global_seed = false
custom_seed = 0
restrict_height = true
reference_frame = 0

[sub_resource type="Resource" id="Resource_sfry4"]
script = ExtResource("5_h0430")
position = Vector3(10, 4, 10)
rotation = Vector3(10, 180, 10)
scale = Vector3(5, 5, 5)
enabled = true
override_global_seed = true
custom_seed = 25
restrict_height = false
reference_frame = 2

[sub_resource type="Resource" id="Resource_lq5i4"]
script = ExtResource("16_qmwrn")
rotation = Vector3(360, 0, 360)
snap_angle = Vector3(180, 0, 180)
enabled = true
override_global_seed = false
custom_seed = 0
restrict_height = false
reference_frame = 2

[sub_resource type="Resource" id="Resource_56f0d"]
script = ExtResource("2_wdwa6")
stack = Array[Resource("res://addons/proton_scatter/src/modifiers/base_modifier.gd")]([SubResource("Resource_egokv"), SubResource("Resource_sfry4"), SubResource("Resource_lq5i4")])

[sub_resource type="Resource" id="Resource_1jvqx"]
script = ExtResource("11_lv5tc")
size = Vector3(29.1644, 1, 11.2962)

[sub_resource type="Resource" id="Resource_k2idu"]
script = ExtResource("15_terd0")
amount = 14
enabled = true
override_global_seed = true
custom_seed = 30
restrict_height = false
reference_frame = 1

[sub_resource type="Resource" id="Resource_5juyu"]
script = ExtResource("12_04tbd")
iterations = 5
offset_step = 0.1
consecutive_step_multiplier = 0.5
use_computeshader = true
enabled = true
override_global_seed = false
custom_seed = 0
restrict_height = true
reference_frame = 0

[sub_resource type="Resource" id="Resource_8rpv2"]
script = ExtResource("13_s5uny")
ray_direction = Vector3(0, -1, 0)
ray_length = 10.0
ray_offset = 1.0
remove_points_on_miss = true
align_with_collision_normal = false
max_slope = 90.0
collision_mask = 1
exclude_mask = 0
enabled = true
override_global_seed = false
custom_seed = 0
restrict_height = false
reference_frame = 0

[sub_resource type="Resource" id="Resource_le8k7"]
script = ExtResource("5_h0430")
position = Vector3(0, 0, 0)
rotation = Vector3(0, 0, 0)
scale = Vector3(3, 3, 3)
enabled = true
override_global_seed = true
custom_seed = 30
restrict_height = false
reference_frame = 2

[sub_resource type="Resource" id="Resource_vl457"]
script = ExtResource("2_wdwa6")
stack = Array[Resource("res://addons/proton_scatter/src/modifiers/base_modifier.gd")]([SubResource("Resource_k2idu"), SubResource("Resource_5juyu"), SubResource("Resource_8rpv2"), SubResource("Resource_le8k7")])

[sub_resource type="Curve3D" id="Curve3D_p31po"]
_data = {
"points": PackedVector3Array(0, 0, 0, 0, 0, 0, -5.18137, -4.76837e-07, 0.742086, 0, 0, 0, 0, 0, 0, -6.91097, -2.38419e-07, -2.62414, 0, 0, 0, 0, 0, 0, 4.23263, 0, -2.10494, 0, 0, 0, 0, 0, 0, 4.13477, 0, -0.306146, 0, 0, 0, 0, 0, 0, -1.36184, 0, 1.16488),
"tilts": PackedFloat32Array(0, 0, 0, 0, 0)
}
point_count = 5

[sub_resource type="Resource" id="Resource_jto6x"]
script = ExtResource("8_vjeqj")
closed = true
thickness = 0.0
curve = SubResource("Curve3D_p31po")

[sub_resource type="Resource" id="Resource_5p0cc"]
script = ExtResource("15_terd0")
amount = 500
enabled = true
override_global_seed = true
custom_seed = 7
restrict_height = true
reference_frame = 1

[sub_resource type="Resource" id="Resource_25te8"]
script = ExtResource("5_h0430")
position = Vector3(0, 0, 0)
rotation = Vector3(360, 360, 360)
scale = Vector3(1.5, 1.5, 1.5)
enabled = true
override_global_seed = false
custom_seed = 0
restrict_height = false
reference_frame = 2

[sub_resource type="Resource" id="Resource_v0wvh"]
script = ExtResource("13_s5uny")
ray_direction = Vector3(0, -1, 0)
ray_length = 10.0
ray_offset = 1.0
remove_points_on_miss = true
align_with_collision_normal = false
max_slope = 90.0
collision_mask = 1
exclude_mask = 0
enabled = true
override_global_seed = false
custom_seed = 0
restrict_height = false
reference_frame = 0

[sub_resource type="Resource" id="Resource_ac5wm"]
script = ExtResource("2_wdwa6")
stack = Array[Resource("res://addons/proton_scatter/src/modifiers/base_modifier.gd")]([SubResource("Resource_5p0cc"), SubResource("Resource_25te8"), SubResource("Resource_v0wvh")])

[sub_resource type="Resource" id="Resource_0weea"]
script = ExtResource("11_lv5tc")
size = Vector3(11.3737, 0.642154, 5.57444)

[sub_resource type="Resource" id="Resource_eq8kb"]
script = ExtResource("15_terd0")
amount = 10000
enabled = true
override_global_seed = false
custom_seed = 0
restrict_height = true
reference_frame = 1

[sub_resource type="Resource" id="Resource_m4caw"]
script = ExtResource("5_h0430")
position = Vector3(0.2, 0, 0.2)
rotation = Vector3(20, 360, 20)
scale = Vector3(6, 5, 6)
enabled = true
override_global_seed = false
custom_seed = 0
restrict_height = false
reference_frame = 2

[sub_resource type="Resource" id="Resource_i8m6m"]
script = ExtResource("13_s5uny")
ray_direction = Vector3(0, -1, 0)
ray_length = 10.0
ray_offset = 1.0
remove_points_on_miss = true
align_with_collision_normal = false
max_slope = 20.0
collision_mask = 1
exclude_mask = 0
enabled = true
override_global_seed = false
custom_seed = 0
restrict_height = false
reference_frame = 0

[sub_resource type="Resource" id="Resource_ywyik"]
script = ExtResource("2_wdwa6")
stack = Array[Resource("res://addons/proton_scatter/src/modifiers/base_modifier.gd")]([SubResource("Resource_eq8kb"), SubResource("Resource_m4caw"), SubResource("Resource_i8m6m")])

[sub_resource type="Resource" id="Resource_iou5c"]
script = ExtResource("9_mhcwm")
radius = 3.03782

[sub_resource type="Resource" id="Resource_llvm5"]
script = ExtResource("9_mhcwm")
radius = 2.15656

[sub_resource type="Resource" id="Resource_maxps"]
script = ExtResource("4_cnevb")
spacing = Vector3(0.2, 0.3, 0.2)
enabled = true
override_global_seed = false
custom_seed = 0
restrict_height = false
reference_frame = 0

[sub_resource type="Resource" id="Resource_5ics8"]
script = ExtResource("16_qmwrn")
rotation = Vector3(0, 360, 0)
snap_angle = Vector3(0, 0, 0)
enabled = true
override_global_seed = false
custom_seed = 0
restrict_height = false
reference_frame = 2

[sub_resource type="Resource" id="Resource_ilaru"]
script = ExtResource("5_h0430")
position = Vector3(0, 0.107, 0)
rotation = Vector3(0, 360, 0)
scale = Vector3(0.75, 0.75, 0.75)
enabled = true
override_global_seed = true
custom_seed = 20
restrict_height = false
reference_frame = 2

[sub_resource type="Resource" id="Resource_elisw"]
script = ExtResource("13_s5uny")
ray_direction = Vector3(0, 0, 1)
ray_length = 1.0
ray_offset = 0.5
remove_points_on_miss = true
align_with_collision_normal = false
max_slope = 90.0
collision_mask = 1
exclude_mask = 0
enabled = true
override_global_seed = false
custom_seed = 0
restrict_height = false
reference_frame = 2

[sub_resource type="Resource" id="Resource_01as6"]
script = ExtResource("2_wdwa6")
stack = Array[Resource("res://addons/proton_scatter/src/modifiers/base_modifier.gd")]([SubResource("Resource_maxps"), SubResource("Resource_5ics8"), SubResource("Resource_ilaru"), SubResource("Resource_elisw")])

[sub_resource type="Resource" id="Resource_272xj"]
script = ExtResource("11_lv5tc")
size = Vector3(1.64858, 0.539851, 0.847638)

[sub_resource type="Resource" id="Resource_p1ngd"]
script = ExtResource("11_lv5tc")
size = Vector3(1.07363, 0.537276, 1.1214)

[sub_resource type="Resource" id="Resource_is18q"]
script = ExtResource("11_lv5tc")
size = Vector3(2.15312, 0.683458, 0.916096)

[sub_resource type="Resource" id="Resource_f0xq2"]
script = ExtResource("15_terd0")
amount = 150
enabled = true
override_global_seed = false
custom_seed = 0
restrict_height = false
reference_frame = 1

[sub_resource type="Resource" id="Resource_txtls"]
script = ExtResource("5_h0430")
position = Vector3(0.058, 0, 0.086)
rotation = Vector3(360, 360, 360)
scale = Vector3(4, 4, 4)
enabled = true
override_global_seed = false
custom_seed = 0
restrict_height = false
reference_frame = 2

[sub_resource type="Resource" id="Resource_i0o45"]
script = ExtResource("13_s5uny")
ray_direction = Vector3(0, -1, 0)
ray_length = 10.0
ray_offset = 1.0
remove_points_on_miss = true
align_with_collision_normal = true
max_slope = 90.0
collision_mask = 1
exclude_mask = 0
enabled = true
override_global_seed = false
custom_seed = 0
restrict_height = false
reference_frame = 0

[sub_resource type="Resource" id="Resource_tmf4u"]
script = ExtResource("2_wdwa6")
stack = Array[Resource("res://addons/proton_scatter/src/modifiers/base_modifier.gd")]([SubResource("Resource_f0xq2"), SubResource("Resource_txtls"), SubResource("Resource_i0o45")])

[sub_resource type="Curve3D" id="Curve3D_lorvn"]
_data = {
"points": PackedVector3Array(0, 0, 0, 0, 0, 0, -3.37811, 0, 0.414886, 0, 0, 0, 0, 0, 0, -6.85248, 0, 0.176656, 0, 0, 0, 0, 0, 0, -6.65984, 0, -2.15071, 0, 0, 0, 0, 0, 0, 0.0761006, 0, -2.44185, 0, 0, 0, 0, 0, 0, 0.0166965, 0, -0.474161),
"tilts": PackedFloat32Array(0, 0, 0, 0, 0)
}
point_count = 5

[sub_resource type="Resource" id="Resource_ojpr0"]
script = ExtResource("8_vjeqj")
closed = true
thickness = 0.0
curve = SubResource("Curve3D_lorvn")

[sub_resource type="Resource" id="Resource_s5vim"]
script = ExtResource("15_terd0")
amount = 13
enabled = true
override_global_seed = false
custom_seed = 0
restrict_height = true
reference_frame = 1

[sub_resource type="Resource" id="Resource_71r1e"]
script = ExtResource("12_04tbd")
iterations = 5
offset_step = 0.02
consecutive_step_multiplier = 0.35
use_computeshader = true
enabled = true
override_global_seed = false
custom_seed = 0
restrict_height = true
reference_frame = 0

[sub_resource type="Resource" id="Resource_7g71n"]
script = ExtResource("5_h0430")
position = Vector3(1, 1, 1)
rotation = Vector3(0, 360, 0)
scale = Vector3(0.2, 0.2, 0.2)
enabled = true
override_global_seed = true
custom_seed = 9
restrict_height = false
reference_frame = 2

[sub_resource type="Resource" id="Resource_xgx45"]
script = ExtResource("13_s5uny")
ray_direction = Vector3(0, -1, 0)
ray_length = 10.0
ray_offset = 1.0
remove_points_on_miss = true
align_with_collision_normal = false
max_slope = 90.0
collision_mask = 1
exclude_mask = 0
enabled = true
override_global_seed = false
custom_seed = 0
restrict_height = false
reference_frame = 0

[sub_resource type="Resource" id="Resource_itou7"]
script = ExtResource("2_wdwa6")
stack = Array[Resource("res://addons/proton_scatter/src/modifiers/base_modifier.gd")]([SubResource("Resource_s5vim"), SubResource("Resource_71r1e"), SubResource("Resource_7g71n"), SubResource("Resource_xgx45")])

[sub_resource type="Resource" id="Resource_bpfxh"]
script = ExtResource("9_mhcwm")
radius = 1.57673

[sub_resource type="Resource" id="Resource_rspgw"]
script = ExtResource("9_mhcwm")
radius = 1.57673

[sub_resource type="Resource" id="Resource_rkfbt"]
script = ExtResource("4_cnevb")
spacing = Vector3(0.78, 2, 0.78)
enabled = true
override_global_seed = false
custom_seed = 0
restrict_height = true
reference_frame = 1

[sub_resource type="Resource" id="Resource_58g4b"]
script = ExtResource("17_2af2s")
amount = 1
min_amount = -1
local_offset = true
offset = Vector3(0.39, 0, 0)
local_rotation = false
rotation = Vector3(0, 0, 0)
individual_rotation_pivots = true
rotation_pivot = Vector3(0, 0, 0)
local_scale = true
scale = Vector3(1, 1, 1)
randomize_indices = false
enabled = true
override_global_seed = false
custom_seed = 0
restrict_height = false
reference_frame = 0

[sub_resource type="Resource" id="Resource_187ca"]
script = ExtResource("17_2af2s")
amount = 1
min_amount = -1
local_offset = true
offset = Vector3(0.195, 0, 0.39)
local_rotation = false
rotation = Vector3(0, 0, 0)
individual_rotation_pivots = true
rotation_pivot = Vector3(0, 0, 0)
local_scale = true
scale = Vector3(1, 1, 1)
randomize_indices = true
enabled = true
override_global_seed = false
custom_seed = 0
restrict_height = false
reference_frame = 0

[sub_resource type="Resource" id="Resource_3s5c4"]
script = ExtResource("5_h0430")
position = Vector3(0, 0.02, 0)
rotation = Vector3(0, 0, 0)
scale = Vector3(0, 0, 0)
enabled = true
override_global_seed = false
custom_seed = 0
restrict_height = false
reference_frame = 2

[sub_resource type="Resource" id="Resource_jft8j"]
script = ExtResource("2_wdwa6")
stack = Array[Resource("res://addons/proton_scatter/src/modifiers/base_modifier.gd")]([SubResource("Resource_rkfbt"), SubResource("Resource_58g4b"), SubResource("Resource_187ca"), SubResource("Resource_3s5c4")])

[sub_resource type="Resource" id="Resource_3agf6"]
script = ExtResource("11_lv5tc")
size = Vector3(3.74466, 1, 3.51889)

[node name="ProtonScatterShowcase" type="Node3D"]
process_mode = 4

[node name="Lighting" type="Node3D" parent="."]

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="Lighting"]
transform = Transform3D(0.422618, -0.383022, 0.821394, 0, 0.906308, 0.422618, -0.906308, -0.178606, 0.383022, 0, 2.29496, 0)
light_color = Color(1, 0.941176, 0.921569, 1)
light_energy = 2.0
light_indirect_energy = 0.5
shadow_enabled = true
shadow_opacity = 0.85
shadow_blur = 0.2
directional_shadow_max_distance = 20.0

[node name="WorldEnvironment" type="WorldEnvironment" parent="Lighting"]
environment = SubResource("Environment_1kod5")

[node name="Camera3D" type="Camera3D" parent="Lighting"]
transform = Transform3D(1, 0, 0, 0, 0.98872, 0.149777, 0, -0.149777, 0.98872, -3.319, 2.435, 4.146)

[node name="gobot" parent="." instance=ExtResource("15_mnk3f")]
transform = Transform3D(0.265388, -0.0494263, 0.420864, 0.0428064, 0.497174, 0.0313953, -0.421589, 0.0193675, 0.26812, -5.95323, 0.542806, 0.830116)

[node name="Water" type="MeshInstance3D" parent="."]
material_override = ExtResource("3_yrj3o")
cast_shadow = 0
mesh = SubResource("PlaneMesh_84bvf")
metadata/_edit_lock_ = true
metadata/_edit_group_ = true

[node name="MainGround" type="Node3D" parent="."]
process_mode = 3
script = ExtResource("1_odnwj")
render_mode = 1
modifier_stack = SubResource("Resource_nl1d8")
Performance/use_chunks = true
Performance/chunk_dimensions = Vector3(15, 15, 15)

[node name="ScatterItem" type="Node3D" parent="MainGround"]
script = ExtResource("3_tn31i")
source_scale_multiplier = 0.4
path = "res://addons/proton_scatter/demos/assets/large_rock.tscn"

[node name="PathShape" type="Node3D" parent="MainGround"]
script = ExtResource("4_5klvy")
shape = SubResource("Resource_ftiyl")

[node name="BackgroundMountain" type="Node3D" parent="."]
process_mode = 3
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 68.323, 0, -80.067)
script = ExtResource("1_odnwj")
modifier_stack = SubResource("Resource_56f0d")
Performance/use_chunks = true
Performance/chunk_dimensions = Vector3(15, 15, 15)

[node name="ScatterItem" type="Node3D" parent="BackgroundMountain"]
script = ExtResource("3_tn31i")
path = "res://addons/proton_scatter/demos/assets/large_rock.tscn"

[node name="BoxShape" type="Node3D" parent="BackgroundMountain"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.41334, -0.086071, -0.341324)
script = ExtResource("4_5klvy")
shape = SubResource("Resource_1jvqx")

[node name="Trees" type="Node3D" parent="."]
process_mode = 3
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.64893, 0, -0.774464)
script = ExtResource("1_odnwj")
render_mode = 1
scatter_parent = NodePath("../MainGround")
modifier_stack = SubResource("Resource_vl457")
Performance/use_chunks = true
Performance/chunk_dimensions = Vector3(15, 15, 15)

[node name="ScatterItem" type="Node3D" parent="Trees"]
script = ExtResource("3_tn31i")
source_scale_multiplier = 0.4
path = "res://addons/proton_scatter/demos/assets/pine_tree.tscn"

[node name="PathShape" type="Node3D" parent="Trees"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0376822, 0, -0.0782702)
script = ExtResource("4_5klvy")
shape = SubResource("Resource_jto6x")

[node name="SmallRocks" type="Node3D" parent="."]
process_mode = 3
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3.58903, 0.624608, -1.05701)
script = ExtResource("1_odnwj")
scatter_parent = NodePath("../MainGround")
modifier_stack = SubResource("Resource_ac5wm")
Performance/use_chunks = true
Performance/chunk_dimensions = Vector3(15, 15, 15)

[node name="ScatterItem" type="Node3D" parent="SmallRocks"]
script = ExtResource("3_tn31i")
source_scale_multiplier = 0.2
path = "res://addons/proton_scatter/demos/assets/small_rock.tscn"

[node name="BoxShape" type="Node3D" parent="SmallRocks"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.279, -0.69077, 0.16165)
script = ExtResource("4_5klvy")
shape = SubResource("Resource_0weea")

[node name="Grass" type="Node3D" parent="."]
process_mode = 3
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4.53694, 0.590527, -0.866904)
script = ExtResource("1_odnwj")
scatter_parent = NodePath("../MainGround")
modifier_stack = SubResource("Resource_ywyik")
Performance/use_chunks = true
Performance/chunk_dimensions = Vector3(15, 15, 15)

[node name="ScatterItem" type="Node3D" parent="Grass"]
script = ExtResource("3_tn31i")
source_scale_multiplier = 0.15
path = "res://addons/proton_scatter/demos/assets/grass_2.tscn"

[node name="SphereShape" type="Node3D" parent="Grass"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.66162, 1.19209e-07, -0.977096)
script = ExtResource("4_5klvy")
shape = SubResource("Resource_iou5c")

[node name="SphereShape2" type="Node3D" parent="Grass"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.21329, 0.0320051, -0.71306)
script = ExtResource("4_5klvy")
shape = SubResource("Resource_llvm5")

[node name="Mushrooms" type="Node3D" parent="."]
process_mode = 3
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3.48012, 0.850601, -0.986201)
script = ExtResource("1_odnwj")
scatter_parent = NodePath("../Trees")
dbg_disable_thread = true
modifier_stack = SubResource("Resource_01as6")
Performance/use_chunks = true
Performance/chunk_dimensions = Vector3(15, 15, 15)

[node name="ScatterItem" type="Node3D" parent="Mushrooms"]
script = ExtResource("3_tn31i")
source_scale_multiplier = 0.2
path = "res://addons/proton_scatter/demos/assets/mushroom.tscn"

[node name="ScatterShape" type="Node3D" parent="Mushrooms"]
transform = Transform3D(0.992366, 0, 0.123324, -0.00806148, 0.997861, 0.0648693, -0.12306, -0.0653683, 0.990244, -0.545904, 0.200069, -0.0382232)
script = ExtResource("4_5klvy")
shape = SubResource("Resource_272xj")

[node name="ScatterShape2" type="Node3D" parent="Mushrooms"]
transform = Transform3D(0.702501, 0, 0.711683, 0, 1, 0, -0.711683, 0, 0.702501, -2.18823, 0.0800232, 0.866356)
script = ExtResource("4_5klvy")
shape = SubResource("Resource_p1ngd")

[node name="ScatterShape3" type="Node3D" parent="Mushrooms"]
transform = Transform3D(0.82657, 0, 0.562834, 0, 1, 0, -0.562834, 0, 0.82657, -2.31684, 0.0552569, -1.67132)
script = ExtResource("4_5klvy")
shape = SubResource("Resource_is18q")

[node name="DeadBranches" type="Node3D" parent="."]
process_mode = 3
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.572101, 0)
script = ExtResource("1_odnwj")
scatter_parent = NodePath("../MainGround")
modifier_stack = SubResource("Resource_tmf4u")
Performance/use_chunks = true
Performance/chunk_dimensions = Vector3(15, 15, 15)

[node name="ScatterItem" type="Node3D" parent="DeadBranches"]
script = ExtResource("3_tn31i")
source_scale_multiplier = 0.6
path = "res://addons/proton_scatter/demos/assets/dead_branch.tscn"

[node name="ScatterShape" type="Node3D" parent="DeadBranches"]
script = ExtResource("4_5klvy")
shape = SubResource("Resource_ojpr0")

[node name="Bushes" type="Node3D" parent="."]
process_mode = 3
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.222831, 0.534039, -1.07373)
script = ExtResource("1_odnwj")
modifier_stack = SubResource("Resource_itou7")
Performance/use_chunks = true
Performance/chunk_dimensions = Vector3(15, 15, 15)

[node name="ScatterItem" type="Node3D" parent="Bushes"]
script = ExtResource("3_tn31i")
source_scale_multiplier = 0.7
path = "res://addons/proton_scatter/demos/assets/bush.tscn"

[node name="ScatterShape" type="Node3D" parent="Bushes"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.300213, 4.76837e-07, -0.398241)
script = ExtResource("4_5klvy")
shape = SubResource("Resource_bpfxh")

[node name="ScatterShape2" type="Node3D" parent="Bushes"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.9127, 4.76837e-07, -1.13497)
script = ExtResource("4_5klvy")
shape = SubResource("Resource_rspgw")

[node name="Platform" type="Node3D" parent="."]
process_mode = 3
transform = Transform3D(0.330514, 0, 0.943801, 0, 1, 0, -0.943801, 0, 0.330514, -12.248, 0, -5.402)
script = ExtResource("1_odnwj")
dbg_disable_thread = true
modifier_stack = SubResource("Resource_jft8j")
Performance/use_chunks = true
Performance/chunk_dimensions = Vector3(15, 15, 15)

[node name="ScatterItem" type="Node3D" parent="Platform"]
script = ExtResource("3_tn31i")
path = "res://addons/proton_scatter/demos/assets/brick.tscn"

[node name="ScatterShape" type="Node3D" parent="Platform"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.248102, 0, 0.914603)
script = ExtResource("4_5klvy")
shape = SubResource("Resource_3agf6")

[node name="LoadingScreen" type="PanelContainer" parent="."]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("18_0clps")

[node name="Label" type="Label" parent="LoadingScreen"]
layout_mode = 2
size_flags_horizontal = 4
text = "Loading"

[connection signal="build_completed" from="Grass" to="LoadingScreen" method="_on_scatter_build_completed"]
